clean up of ignored files

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 A ladder program to manage competitors in an ICYPC tournament.  More setup instructions coming...
 
+This edit made in the clean-pycs branch.
+
 jtk, 11/3/10
