--- a/README
+++ b/README
@@ -2,4 +2,6 @@ A ladder program to manage competitors in an ICYPC tournament.  More setup instr
 
 This edit made in the clean-pycs branch.
 
-jtk, 11/3/10
+Latest edit made back in the master branch.
+
+jtk, 11/5/10
